# nmtw

./: .gitignore  .replit  README.md  app.py  baumann.py  database.py  init_db.py  main.py  models.py  pyproject.toml  recommendations.py  skincare.py  weather.py
attached_assets/: Pasted-Below-is-a-simplified-guide-for-creating-a-weather-dependent-skincare-recommendation-app-on--1735319882284.txt
instance/: skincare.db
static/js/: location.js  quiz.js
templates/: base.html  index.html  mood_tracker.html  quiz.html  quiz_result.html  results.html  routine_builder.html
