[project]
name = "repl-nix-weatherskincare"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
]
